dffgp{rgjhipdikkl{er

--- a/OTONO2016/1/Semantica1/Semantica1.tex
+++ b/OTONO2016/1/Semantica1/Semantica1.tex
@@ -14,14 +14,18 @@
 \newcommand{\confxu}[1]{#1 [x,\{v\}:s]}
 \newcommand{\confxD}[1]{#1 [\subxD]}
 \newcommand{\confx}[1]{#1 [\SubxD]}
+\newcommand{\confxW}[1]{#1 [\SubxDW]}
 \newcommand{\confy}[1]{#1 [\SubyD]}
+\newcommand{\confyW}[1]{#1 [\SubyDW]}
 \newcommand{\confext}[1]{#1 [x \mapsto v \oplus s]}
 
 
 \newcommand{\subx}{x \mapsto \{\overline{v}\},s}
 \newcommand{\subxD}{x \mapsto \{\overline{v}\},s}
 \newcommand{\SubxD}{x \mapsto \{\overline{v}\},s}
+\newcommand{\SubxDW}{x \mapsto w,s}
 \newcommand{\SubyD}{y \mapsto \{\overline{v}\},s}
+\newcommand{\SubyDW}{y \mapsto w,s}
 \newcommand{\Subx}{x \mapsto \{\overline{v}\},s'}
 \newcommand{\Suby}{y \mapsto \{\overline{v}\},s'}
 %\nevcommand{\subx}{[x,(v:T_1):s']}
@@ -39,6 +43,7 @@
 
 
 \newcommand{\ascrip}[1]{#1::T}
+\newcommand{\ascripS}[1]{#1::S}
 \newcommand{\ascripP}[2]{#1::#2}
 \newcommand{\oletD}{\mathsf{mlet} \ x = t \ \mathsf{in}  \ t}
 \newcommand{\olet}{\mathsf{mlet} \ x = t_1 \ \mathsf{in}  \ t_2}
@@ -93,19 +98,22 @@
 
 
 \begin{document}
+\section{Languages}
+
+\subsection{\semanticA}
 \semanticA:
 \begin{itemize}
 \item Non deterministic.
 \item Type error means stuck.
-\item Without type annotation in lambda functions or $\mathsf{mlet}$.
-\item Introduce the explicit substitution in $\mathsf{mlet}$, and the substitution in lambdas.
+\item Without type annotation in lambda functions and $\mathsf{mlet}$.
+\item Introduce the explicit substitution in $\mathsf{mlet}$, and the substitution in lambdas, the difference. 
 \item Characterize errors.
-\item Index.
+\item Fix Index .
 \end{itemize}
 
 \setlength{\topmargin}{-25mm}
 \setlength{\textheight}{230mm}
-\begin{figure}
+\begin{figure}[h]
 \begin{small}
 %\begin{table}
 \begin{center}
@@ -118,8 +126,8 @@ $t$&$::=$&&$\mathsf {terms}$\\
 &&$b$&$\mathsf {boolean \ value}$\\
 &&$n$&$\mathsf {numeric \ value}$\\
 &&$op$&$\mathsf{operator}$\\
-&&$\absST {x}{t}$&\ $\mathsf {abstraction}$\\
 &&$x$&$\mathsf {variable}$\\
+&&$\absST {x}{t}$&\ $\mathsf {abstraction}$\\
 &&$\app {t}{t}$&$\mathsf {application}$\\
 &&$\oletD$&$\mathsf {overloading \ let}$\\
 %&&$\ascrip {t}$&$\mathsf {ascription}$\\
@@ -141,7 +149,7 @@ $op$&$::=$&&$\mathsf {operators}$\\
 %&&$\boolt$&$\mathsf {type \ of \ booleans}$\\
 %&&$T \to T$&$\mathsf {type \ of \ functions}$\\
 %&&&\\
-$v$&$::=$&&$\mathsf {configuration-values}$\\
+$v$&$::=$&&$\mathsf {values}$\\
 &&$b$&$\mathsf {boolean \ value}$\\
 &&$n$&$\mathsf{numeric \ value} $\\
 &&$op$&$\mathsf{operator}$\\
@@ -156,6 +164,7 @@ $c$&$::=$&&$\mathsf {configurations}$\\
 %&&$\suma{c}$&\\
 % &&$\negacion{c}$&\\
 %&&$\mathsf{error}$&\\
+&&&\\
 $s$&$::=$&&$\mathsf {explicit \ substitutions}$\\
 &&$ \bullet$&$\mathsf {empty \ substitution}$\\
 &&$\subx$&$\mathsf {variable \ substitution}$\\
@@ -172,7 +181,7 @@ $s$&$::=$&&$\mathsf {explicit \ substitutions}$\\
 \end{small}
 \end{figure}
 
-\begin{figure}
+\begin{figure}[h]
 \begin{small}
 \begin{center}
 \begin{tabular}{|c r|}
@@ -250,19 +259,17 @@ Given an environment  $s$ and a variable binding $x \mapsto v_1$, the operator $
 \]
 \end{definition}
 
-
+\subsection{\semanticB}
 \semanticB:
 \begin{itemize}\item Non deterministic.
 \item Type error means stuck.
 \item Dispatch error means stuck.
-\item Without type annotation in lambda functions or $\mathsf{mlet}$.
+\item Without type annotation in lambda functions and $\mathsf{mlet}$.
 \item Semantic "tag driven", introducing flat tag in the environment.
-
- 
 \end{itemize}
 
 
-\begin{figure}
+\begin{figure}[]
 \begin{small}
 \begin{center}
 \begin{tabular}{|l c l r|}
@@ -282,56 +289,14 @@ $S$&$::=$&&$\mathsf {tags}$\\
 \end{figure}
 
 
-\begin{figure}
+\begin{figure}[]
 \begin{small}
 \begin{center}
 \begin{tabular}{|c r|}
 \hline
 &\\
 &\framebox {$c \tto c$}\\
-&\\
-%$\truet[s] \tto \truet$&$\rulename{True}  $\\
-%&\\
-%$\falset[s] \tto \falset$&$\rulename{False}  $\\
-$b[s] \tto b$&$\rulename{False}  $\\
-&\\
-$n[s] \tto n$&$\rulename{Num}  $\\
-&\\
-$op [s] \tto op$&$\rulename{Op}  $\\
-%&\\
-%$x[ \ ] \tto \mathsf{error}$&$\rulename{ErrVarFail}$\\
-&\\
-$\confx{x} \tto v_i$&$\rulename{VarOk}  $\\
-&\\
-$\inference {x \neq y} {\confy{x} \tto x[s]}$&$\rulename{VarNext}  $\\
-&\\
-$ \ascrip{v} \tto v $&$\rulename{Asc} $\\
-&\\
-$\inference{S_1 = \tagval(v)}{\oletP{T_1}{v}{t_2[s]} \tto \confext{t_2}}$&$\rulename{Let} $\\
-&\\
-$\conf{\absST{x}{t_2}} \ v \tto \conf{[x \mapsto v]{t_2}}$&$\rulename{App}$\\
-&\\
-$\suma{n} \tto n + 1$&$\rulename{Sum}$\\
-&\\
-$\negacion{b} \tto \neg \ b $&$\rulename{Negation}$\\
-&\\
-\hline
-\end{tabular}
-\caption{Configuration reduction rules.}
-\label{tabla:sencilla}
-\end{center}
-\end{small}
-\end{figure}
-
-
-
-\begin{figure}
-\begin{small}
-\begin{center}
-\begin{tabular}{|c r|}
-\hline
-&\\
-&\framebox {$c \tto c$}\\
+$\cdots$&\\
 &\\
 %$ \inference{ S = \tagtype(T) & v = \buscar(x, [s], S)}{\ascrip{x[s]} \tto  \ascrip{v}} $&$\rulename{AscVar}$\\
 %&\\
@@ -359,14 +324,186 @@ $ \inference {c \tto c' & \novalvar{c}}{op \ c \tto op \ c'}$&$\rulename{App4}  
 %$ \inference {c \tto c'}{\suma{v}{c} \tto \suma{v}{c'}}$&$\rulename{Sum2}  $\\
 %&\\
 %$ \inference {c \tto c'}{\negacion{c} \tto \negacion{c'}}$&$\rulename{Negation1}  $\\
-&\\
+$\cdots$&\\
 \hline
 \end{tabular}
-\caption{Configuration reduction rules.}
+\caption{Reduction rules for \semanticB (Extends \semanticA).}
 \label{tabla:sencilla}
 \end{center}
 \end{small}
 \end{figure}
+
+\begin{definition}[$\buscar$]
+\label{definition:tcs}
+\mbox{}
+The relation $\buscar$ is defined  as follows:
+\[ \buscar  = \{(x, s, S', v)| x \mapsto v \in \mathsf{flat}(s) \wedge \lab(v) = S\}
+\]
+\end{definition}
+
+\begin{definition}[$\mathsf{flat}$]
+\label{definition:tcs}
+\mbox{}
+The function $\mathsf{flat}$ is defined  as follows:
+\[ \mathsf{flat}(s) = \begin{cases} 
+      \varnothing & s =  \varnothing \\
+      x \mapsto v_1 \cdots , x \mapsto v_n,\mathsf{flat} (s') & s = x \mapsto \{\overline{v}\}, s'\\
+   \end{cases}
+\]
+\end{definition}
+
+\begin{definition}[$\lab$]
+\label{definition:tcs}
+\mbox{}
+The function $\lab$ is defined  as follows:
+\[ \lab(v) = \begin{cases} 
+      \intt & v = n \\
+      \boolt & v = b \\
+      \funt & v = \absST{x}{t}\\
+   \end{cases}
+\]
+\end{definition}
+
+\subsection{\semanticB \ with ascription}
+
+\setlength{\topmargin}{-25mm}
+\setlength{\textheight}{230mm}
+\begin{figure}[h]
+\begin{small}
+\begin{center}
+\hspace*{-2cm}
+\begin{tabular}{|l c l r|}
+\hline
+$t$&$::=$&&$\mathsf {terms}$\\
+&&$\cdots$&\\
+&&$\ascripS{t}$&$\mathsf {ascription}$\\
+&&&\\
+$c$&$::=$&&$\mathsf {configurations}$\\
+&&$\cdots$&\\
+&&$\ascripS{c}$&\\
+\hline
+\end{tabular}
+\hspace*{-2cm}
+\caption{Syntax of the \semanticB with ascriptions.}
+\label{figure:sencilla}
+\end{center}
+\end{small}
+\end{figure}
+
+
+\begin{figure}[h]
+\begin{small}
+\begin{center}
+\begin{tabular}{|c r|}
+\hline
+&\\
+&\framebox {$c \tto c$}\\
+$\cdots$&\\
+$ \ascripS{v} \tto v $&$\rulename{Asc} $\\
+&\\
+$ \inference{v = \buscar(x, [s], S)}{\ascripS{x[s]} \tto  \ascrip{v}} $&$\rulename{AscVar}$\\
+&\\
+$ \inference {c \tto c' & \novalvar{c}}{\ascripS{c} \tto \ascripS{c'} }$&$\rulename{Asc1} $\\
+&\\
+\hline
+\end{tabular}
+\caption{Reduction rules for \semanticB  \ with ascriptions.}
+\label{tabla:sencilla}
+\end{center}
+\end{small}
+\end{figure}
+
+\subsection{\semanticC}
+
+\setlength{\topmargin}{-25mm}
+\setlength{\textheight}{230mm}
+\begin{figure}[h]
+\begin{small}
+%\begin{table}
+\begin{center}
+\hspace*{-2cm}
+\begin{tabular}{|l c l r|}
+\hline
+&&$\cdots$&\\
+$w$&$::=$&&$\mathsf {multi-value}$\\
+&&$\{\overline{v}\}$&$\mathsf {set \ of \ values}$\\
+\hline
+\end{tabular}
+\hspace*{-2cm}
+\caption{Syntax of the \semanticC (Extends \semanticB \  with ascriptions).}
+\label{figure:sencilla}
+\end{center}
+%\end{table}
+\end{small}
+\end{figure}
+
+\begin{figure}[h]
+\begin{small}
+\begin{center}
+\begin{tabular}{|c r|}
+\hline
+&\\
+&\framebox {$c \tto c$}\\
+&\\
+$w[s] \tto w$&$\rulename{MultiValue}  $\\
+&\\
+$\confxW{x} \tto w$&$\rulename{VarOk}  $\\
+&\\
+$\inference {x \neq y} {\confyW{x} \tto x[s]}$&$\rulename{VarNext}  $\\
+%&\\
+%$ \conf{\ascrip{t}} \tto \ascrip{t[s]}$&$\rulename{AscSub}$\\
+&\\
+$ \conf{\olet} \tto \oletP{T_1}{t_1[s]}{t_2[s]}$&$\rulename{LetSub} $\\
+&\\
+$\conf{\appD} \tto t_1 [s] \ t_2 [s]$&$\rulename{AppSub} $\\
+%&\\
+%$\conf{\suma{t_1}} \tto \suma{t_1 [s]}$&$\rulename{SumSub} $\\
+%&\\
+%$\conf{\negacion{t}} \tto \negacion{t [s]}$&$\rulename{NegationSub} $\\
+&\\
+%$ \ascrip{v} \tto v $&$\rulename{Asc} $\\
+%&\\
+${\oletP{T_1}{v}{t_2[s]} \tto \confext{t_2}}$&$\rulename{Let} $\\
+&\\
+$\conf{\absST{x}{t_2}} \ v \tto \conf{[x \mapsto v]{t_2}}$&$\rulename{App}$\\
+&\\
+$\suma{n} \tto n + 1$&$\rulename{Sum}$\\
+&\\
+$\negacion{b} \tto \neg \ b $&$\rulename{Negation}$\\
+&\\
+%$ \inference {c \tto c'}{\ascrip{c} \tto \ascrip{c'} }$&$\rulename{Asc1} $\\
+%&\\
+$ \inference {c_1 \tto c_1'}{\oletP{T_1}{c_1}{c_2} \tto \oletP{T_1}{c_1'}{c_2} }$&$\rulename{Let1} $\\
+&\\
+$\inference {c_1 \tto c_1'}{c_1 \ c_2 \tto c_1' \ c_2} $&$\rulename{App1}  $\\
+&\\
+$ \inference {c \tto c'}{v \ c \tto v \ c'}$&$\rulename{App2}  $\\
+&\\
+%$\inference {c \tto c'}{op \ c \tto op \ c'} $&$\rulename{OpApp1}  $\\
+%$\inference {c_1 \tto c_1'}{\suma{c_1} \tto \suma{c_1'}} $&$\rulename{Sum1}  $\\
+%&\\
+%$ \inference {c \tto c'}{\suma{v}{c} \tto \suma{v}{c'}}$&$\rulename{Sum2}  $\\
+%&\\
+%$ \inference {c \tto c'}{\negacion{c} \tto \negacion{c'}}$&$\rulename{Negation1}  $\\
+&\\
+\hline
+\end{tabular}
+\caption{Reduction rules for \semanticC.}
+\label{tabla:sencilla}
+\end{center}
+\end{small}
+\end{figure}
+
+\subsection{\semanticD}
+
+
+
+
+
+
+
+
+
 
 
 \end{document}
